--- a/Photo.html
+++ b/Photo.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photo</title>
+    <title>Photo of croissant with honey</title>
+    <meta name="photo" content="croissant as a breakfast">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
