--- a/contactme.html
+++ b/contactme.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>croissant.com</title>
+    <meta name=" contact croissant.com" content="how to order a croissant">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
